--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,9 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -20,16 +22,16 @@
     <br><br>
      <!-- Navigation Section -->
     <nav>
-        <a href="home.html">Home</a> &nbsp;&nbsp;&nbsp;
-      <a href="">Tech Stack</a>&nbsp;&nbsp;&nbsp;
-      <a href="">Projects</a>&nbsp;&nbsp;&nbsp;
-      <a href="">Education</a>&nbsp;&nbsp;&nbsp;
+        <a href="home.html" target="myFrame">Home</a> &nbsp;&nbsp;&nbsp;
+      <a href="tectStack.html" target="myFrame">Tech Stack</a>&nbsp;&nbsp;&nbsp;
+      <a href="projectDetails.html" target="myFrame">Projects</a>&nbsp;&nbsp;&nbsp;
+      <a href="academicDetails.html" target="myFrame">Education</a>&nbsp;&nbsp;&nbsp;
       <a href="">Others</a>&nbsp;&nbsp;&nbsp;
-      <a href="">personal</a>&nbsp;&nbsp;&nbsp;
+      <a href="personal.html" target="myFrame">personal</a>&nbsp;&nbsp;&nbsp;
     </nav><br><br>
     <!-- Main Section -->
-    <footer>
-        <iframe src="" width="500" height="500"></iframe>
+    
+        <iframe src="home.html" name="myFrame" width="500" height="500"></iframe>
     <br><br>
     <!-- Footer Section -->
    <!-- Footer section  -->
