--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
       <a href="tectStack.html" target="myFrame">Tech Stack</a>&nbsp;&nbsp;&nbsp;
       <a href="projectDetails.html" target="myFrame">Projects</a>&nbsp;&nbsp;&nbsp;
       <a href="academicDetails.html" target="myFrame">Education</a>&nbsp;&nbsp;&nbsp;
-      <a href="">Others</a>&nbsp;&nbsp;&nbsp;
+      <a href="others.html" target="myFrame">Others</a>&nbsp;&nbsp;&nbsp;
       <a href="personal.html" target="myFrame">personal</a>&nbsp;&nbsp;&nbsp;
     </nav><br><br>
     <!-- Main Section -->
