--- a/personal.html
+++ b/personal.html
@@ -9,12 +9,19 @@
     <br>
     <br>
     &nbsp; &nbsp; &nbsp; &nbsp;
+    <h2>Professional Summery</h2>
+    <ul>
+        <li>Having 1 year of experience in web developing Single page web application using Angular HTMl5,CSS3,Bootstrap 5,JavaScript,TypeScript </li>
+        <li>Experience on working with version control system GIT and GitHub.</li>
+        <li>Experience working with jira for user stories and bug tracking </li>
+        <li>Strong debugging and troubleshooting code experience using Chrome Developer Tool </li>
+        <li>Working exposure on ID's like VS Code,Eclipse,Notepad++</li>
+        <li>Good working experience under Agile methodologies environment </li>
+        <li>Experience in using Chrome Developer Tool for Debugging and troubleshooting  the code</li>
+        <li>knowledge of Node Js</li>
+        <li>Ability to work with people at all levels in the program</li>
+        <li>Knowledge of Mongodb express Js</li>
+    </ul>
     
-    <img src="assets/RJ.jpeg" width="100" height="100"><br>
-    <p>Name:Roshan Jaiswal.</p>
-    <p>Profession:Web Developer</p>
-    <p>Years of Experience:2 Years.</p>
-    <p>Company Name:Apple</p>
-    <p>DOJ: 1 Aug 2021</p>
 </body>
 </html>
