introduction to css

--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <title>Home</title>
 </head>
 <body>
+    <h2>Career Objective</h2>
+    <p></p>
     <fieldset><h2>Professional Summery</h2></fieldset>
     <ul type="square">
         <li>Having 2 of experience in developing single page application using React Js and web development using spring boot. </li>
