--- a/home.html
+++ b/home.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    <style>
+        .myClass{
+            background-color:red;
+            color:chartreuse;
+        }
+        span{
+            color:gold;
+        }
+        #list{
+            background-color:deeppink ;
+            color: aquamarine;
+        }
+    </style>
+
 </head>
 <body>
-    <h2>Career Objective</h2>
-    <p></p>
-    <fieldset><h2>Professional Summery</h2></fieldset>
+    <h2 class="myClass">Career Objective</h2>
+    <p>To work in organization where i can learn and grow my skills and hel;o organizational growth</p>
+    <fieldset><h2 class="myClass">Professional Summery</h2></fieldset>
     <ul type="square">
-        <li>Having 2 of experience in developing single page application using React Js and web development using spring boot. </li>
-        <li>experience on version control system - GIT and GitHub.</li>
+        <li>Having 2 of experience in developing single page application using <span> React Js</span> and web development using spring boot. </li>
+        <li id="list">experience on version control system - GIT and GitHub.</li>
         <li>Experience working with JIRA for user stories and bug tracking</li>
         <li>Strong Debugging and troubleshooting code experience using Chrome Developer Tool.</li>
         <li>Working exposure on IDs like VS Code,Eclipse.</li>
