--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <style>
+      
+       #myName,#myNo,#myMail{
+        color:red;
+          background-color:burlywood;
+       }
+    </style>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -14,9 +21,9 @@
 <body>
     <header>
         <!-- Header Section -->
-        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;<span>Roshan Jaiswal<strong></strong></span>&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;<span>+91 7083 59 7475</span>&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;<span>roshanjaiswal4122@gmail.com</span>&nbsp;&nbsp;&nbsp;<br><br>
+        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;<span id="myName">Roshan Jaiswal<strong></strong></span>&nbsp;&nbsp;&nbsp;
+        <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;<span id="myNo">+91 7083 59 7475</span>&nbsp;&nbsp;&nbsp;
+        <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;<span id="myMail">roshanjaiswal4122@gmail.com</span>&nbsp;&nbsp;&nbsp;<br><br>
       
     </header>
     <br><br>
