--- a/assets/basicCss.html
+++ b/assets/basicCss.html
@@ -7,10 +7,13 @@
     <!-- Internal CSS -->
     <style>
         h2{
-            color:aqua;
+            /* color:aqua; */
+            /* RGB Function */
+            color: rgb(148, 173, 37);
             text-decoration: underline;
             text-transform: capitalize;
         }
+      
        
         #myName{
             color: blueviolet;
@@ -30,6 +33,10 @@
             color: red;
             font-style: italic;
         }
+        .dummy{
+            text-transform:uppercase;
+            text-align: center;
+        }
     </style>
  
 
@@ -47,6 +54,7 @@
     <h3>Lorem, ipsum dolor.</h3>
     <h4>Lorem ipsum dolor sit amet consectetur.</h4>
     <p>I am <span id="developer">UI Developer</span> having 4 years of experience</p>
+    <p class="dummy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aliquid placeat, blanditiis expedita consequuntur sed recusandae! Accusamus voluptate minus dolore.</p>
 </body>
 
 </html>
