--- a/personal.html
+++ b/personal.html
@@ -4,23 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal</title>
+    <style>
+        .headings{
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            color: rgb(219, 52, 138);
+        }
+    </style>
 </head>
 <body>
-    <br>
-    <br>
-    &nbsp; &nbsp; &nbsp; &nbsp;
-    <h2>Professional Summery</h2>
+    
+    <h2 class="headings">Personal Details</h2>
+    <hr>
+    <h2 class="headings">Basic Details</h2>
+    <ul type="square">
+        <li><span>Name:</span>Roshan Jaiswal</li>
+        <li><span>Address:</span>At Post Sonwad Tal Dharangoan Dist Jalgoan</li>
+        <li><span>DOB:</span>14-Des-1998</li>
+        <li><span>Phone:<7083597475/span></li>
+        <li><span>Gender:</span>Male</li>
+        <li><span>Email:</span>roshanjaiswal4122@gmail.com</li>
+        <li><span>Nationality:</span>Indian</li>
+    </ul>
+    <hr>
+    <h2 class="headings">Education Details</h2>
+    <p>
+        MCA from School of Computer science, KBC NMU Jalgoan.
+    </p>
+    <hr>
+    <h2 class="headings">Technical Skills</h2>
     <ul>
-        <li>Having 1 year of experience in web developing Single page web application using Angular HTMl5,CSS3,Bootstrap 5,JavaScript,TypeScript </li>
-        <li>Experience on working with version control system GIT and GitHub.</li>
-        <li>Experience working with jira for user stories and bug tracking </li>
-        <li>Strong debugging and troubleshooting code experience using Chrome Developer Tool </li>
-        <li>Working exposure on ID's like VS Code,Eclipse,Notepad++</li>
-        <li>Good working experience under Agile methodologies environment </li>
-        <li>Experience in using Chrome Developer Tool for Debugging and troubleshooting  the code</li>
-        <li>knowledge of Node Js</li>
-        <li>Ability to work with people at all levels in the program</li>
-        <li>Knowledge of Mongodb express Js</li>
+        <li>Knowledge About HTML5</li>
+        <li>Knowledge About CSS</li>
+        <li>Knowledge About JavaScript</li>
+        <li>Knowledge About React Js</li>
     </ul>
     
 </body>
