--- a/home.html
+++ b/home.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    
 
     <style>
         .myClass{
             background-color:red;
             color:chartreuse;
+            font-family:'Roboto', sans-serif;;
         }
         span{
             color:gold;
@@ -17,6 +22,9 @@
             background-color:deeppink ;
             color: aquamarine;
         }
+        #summaryList{
+            font-family: 'Poppins', sans-serif;
+        }
     </style>
 
 </head>
@@ -24,7 +32,7 @@
     <h2 class="myClass">Career Objective</h2>
     <p>To work in organization where i can learn and grow my skills and hel;o organizational growth</p>
     <fieldset><h2 class="myClass">Professional Summery</h2></fieldset>
-    <ul type="square">
+    <ul id="summaryList" type="square">
         <li>Having 2 of experience in developing single page application using <span> React Js</span> and web development using spring boot. </li>
         <li id="list">experience on version control system - GIT and GitHub.</li>
         <li>Experience working with JIRA for user stories and bug tracking</li>
