--- a/home.html
+++ b/home.html
@@ -24,6 +24,14 @@
         }
         #summaryList{
             font-family: 'Poppins', sans-serif;
+
+        }
+        li{
+            list-style: none;
+        }
+        li::before{
+           
+            content: "👉"
         }
     </style>
 
