--- a/projectDetails.html
+++ b/projectDetails.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Details</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    
+
+    <style>
+        body{
+            font-family: 'Roboto', sans-serif;
+        }
+        /* h1,p,h4::selection{
+           color: red;
+        } */
+
+        .info::selection{
+            background-color: aqua;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>&nbsp; &nbsp;<strong>Project Details</strong> </h1>
+    <h1 class="info">&nbsp; &nbsp;<strong>Project Details</strong> </h1>
     <hr>
-    <p><strong>Environment:</strong> &nbsp;&nbsp;<mark>React js,TypeScript,JavaScript,HTML5,CSS,BootStrp,GitHub,Desktop Github,Agile And Gira,IDE-VS Code</mark></p>
-    <p><strong>Team Size:</strong>06&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration:</strong><i>2021-1<sup>st</sup>-Jul till Present</i></p>
-    <p><strong>Project Description:</strong> This Project is mainly used for student management in College,where It Help to manage student record like student registration,student update information and to see all his or her academic activities like score card ,attendace</p>
+    <p class="info"><strong>Environment:</strong> &nbsp;&nbsp;<mark>React js,TypeScript,JavaScript,HTML5,CSS,BootStrp,GitHub,Desktop Github,Agile And Gira,IDE-VS Code</mark></p>
+    <p class="info"><strong>Team Size:</strong>06&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration:</strong><i>2021-1<sup>st</sup>-Jul till Present</i></p>
+    <p class="info"><strong>Project Description:</strong> This Project is mainly used for student management in College,where It Help to manage student record like student registration,student update information and to see all his or her academic activities like score card ,attendace</p>
     <hr>
-    <h4><strong>Role And Responsibilities:</strong></h4>
-    <p>Desiged and implimented user interfaces usuing HTML5 and CSS.</p>
-    <p>Work closely with backend developers for code integration.</p>
-    <p>Identify and troubleshooting issues with front end code.</p>
-    <p>Work on Git as aversion control.</p>
-    <p>Used JIRa for Bug tracking.</p>
-    <p>Impliment project using Agile Scrum methodology, Involved in daily stand up meetings,sprint showcase and sprint retrospective </p>
-    <p>Invalved in fixing technical issues.</p>
+    <h4 class="info"><strong>Role And Responsibilities:</strong></h4>
+    <p class="info">Designed and implemented user interfaces usuing HTML5 and CSS.</p>
+    <p class="info">Work closely with backend developers for code integration.</p>
+    <p class="info">Identify and troubleshooting issues with front end code.</p>
+    <p class="info">Work on Git as aversion control.</p>
+    <p class="info">Used JIRa for Bug tracking.</p>
+    <p class="info">Implement project using Agile Scrum methodology, Involved in daily stand up meetings,sprint showcase and sprint retrospective </p>
+    <p class="info">Invalid in fixing technical issues.</p>
     <hr>
 
 
