--- a/academicDetails.html
+++ b/academicDetails.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Details</title>
+
+    <style>
+        th::selection{
+            background-color: darkorange;
+        }
+        td::selection{
+            background-color: brown;
+        }
+        strong::selection{
+            background-color: aqua;
+        }
+
+    </style>
 </head>
+
 <body>
     <strong>Academic Details</strong>
     <table border="1">
